[package]
name = "thegame"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[[bin]]
name = "thegame"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.11.8"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.4.0"

[package.metadata.wasm-pack]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "27.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}